[gd_scene load_steps=4 format=3 uid="uid://c3pm8cufrxyt4"]

[ext_resource type="Texture2D" uid="uid://b5gex57yk730j" path="res://weapons/bow.png" id="1_eupvs"]
[ext_resource type="Script" path="res://weapons/bow.gd" id="1_jaffn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kjjg1"]
radius = 648.028

[node name="Bow" type="Area2D"]
script = ExtResource("1_jaffn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kjjg1")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="Bow" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(71, 0)
scale = Vector2(2, 2)
texture = ExtResource("1_eupvs")

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Bow"]
unique_name_in_owner = true
position = Vector2(-3.5, 0)
scale = Vector2(0.5, 0.5)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
